force-app/main/default/objects/KimbleOne__SupplierInvoiceLine__c/fields/KimbleOne__Narrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Narrative__c</fullName>
    <label>Narrative</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>