force-app/main/default/objects/KimbleOne__SupplierInvoiceLine__c/fields/KimbleOne__SupplierInvoice__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierInvoice__c</fullName>
    <label>Supplier Invoice</label>
    <referenceTo>KimbleOne__SupplierInvoice__c</referenceTo>
    <relationshipLabel>Supplier Invoice Lines</relationshipLabel>
    <relationshipName>SupplierInvoiceLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>