force-app/main/default/objects/KimbleOne__SupplierInvoiceLine__c/fields/KimbleOne__TimeCostRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimeCostRate__c</fullName>
    <label>Time Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>