force-app/main/default/objects/KimbleOne__SupplierInvoiceLine__c/fields/KimbleOne__TimeTotalUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimeTotalUnits__c</fullName>
    <label>Time Total Units</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>