force-app/main/default/objects/KimbleOne__SupplierInvoiceLine__c/fields/KimbleOne__TimeTotalUnitsFormatted__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimeTotalUnitsFormatted__c</fullName>
    <label>Time Total Units (Formatted)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>